TP2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Commands
Rule 1     Commands -> Commands Command
Rule 2     Commands -> Command
Rule 3     Command -> Indents str
Rule 4     Command -> Indents str .
Rule 5     Command -> Indents str . str .
Rule 6     Command -> Indents str . str
Rule 7     Command -> Indents str {
Rule 8     Command -> Indents }
Rule 9     Command -> Indents . str
Rule 10    Command -> Indents hash str
Rule 11    Command -> Indents input Atribs )
Rule 12    Command -> Indents str ( Atribs )
Rule 13    Command -> Indents str ( Atribs ) STR
Rule 14    Command -> Indents str . str ( str = str )
Rule 15    Command -> Indents const str = [ LqStr ]
Rule 16    Command -> Indents href link STR
Rule 17    Command -> Indents str STR
Rule 18    Command -> Indents Cycle str in Range
Rule 19    Command -> Indents dSign str = Op
Rule 20    Op -> Op + Op
Rule 21    Op -> Op - Op
Rule 22    Op -> Op * Op
Rule 23    Op -> Op / Op
Rule 24    Op -> str
Rule 25    Cycle -> each
Rule 26    Cycle -> for
Rule 27    Range -> [ STR ]
Rule 28    Range -> str
Rule 29    Command -> Indents str hash str STR
Rule 30    Command -> doctype str
Rule 31    LqStr -> LqStr comma qStr
Rule 32    LqStr -> qStr
Rule 33    Atribs -> Atribs Atrib
Rule 34    Atribs -> Atrib
Rule 35    Atrib -> str = qStr
Rule 36    Atrib -> str = link
Rule 37    Atrib -> str = str
Rule 38    STR -> STR str
Rule 39    STR -> STR Atrib
Rule 40    STR -> dSign str dSign
Rule 41    STR -> dSign str . str dSign
Rule 42    STR -> str
Rule 43    STR -> Atrib
Rule 44    Indents -> Indents Indent
Rule 45    Indents -> <empty>
Rule 46    Indent -> tab

Terminals, with rules where they appear

(                    : 12 13 14
)                    : 11 12 13 14
*                    : 22
+                    : 20
-                    : 21
.                    : 4 5 5 6 9 14 41
/                    : 23
=                    : 14 15 19 35 36 37
[                    : 15 27
]                    : 15 27
comma                : 31
const                : 15
dSign                : 19 40 40 41 41
doctype              : 30
each                 : 25
error                : 
for                  : 26
hash                 : 10 29
href                 : 16
in                   : 18
input                : 11
link                 : 16 36
qStr                 : 31 32 35
str                  : 3 4 5 5 6 6 7 9 10 12 13 14 14 14 14 15 17 18 19 24 28 29 29 30 35 36 37 37 38 40 41 41 42
tab                  : 46
{                    : 7
}                    : 8

Nonterminals, with rules where they appear

Atrib                : 33 34 39 43
Atribs               : 11 12 13 33
Command              : 1 2
Commands             : 1 0
Cycle                : 18
Indent               : 44
Indents              : 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 29 44
LqStr                : 15 31
Op                   : 19 20 20 21 21 22 22 23 23
Range                : 18
STR                  : 13 16 17 27 29 38 39

Parsing method: LALR

state 0

    (0) S' -> . Commands
    (1) Commands -> . Commands Command
    (2) Commands -> . Command
    (3) Command -> . Indents str
    (4) Command -> . Indents str .
    (5) Command -> . Indents str . str .
    (6) Command -> . Indents str . str
    (7) Command -> . Indents str {
    (8) Command -> . Indents }
    (9) Command -> . Indents . str
    (10) Command -> . Indents hash str
    (11) Command -> . Indents input Atribs )
    (12) Command -> . Indents str ( Atribs )
    (13) Command -> . Indents str ( Atribs ) STR
    (14) Command -> . Indents str . str ( str = str )
    (15) Command -> . Indents const str = [ LqStr ]
    (16) Command -> . Indents href link STR
    (17) Command -> . Indents str STR
    (18) Command -> . Indents Cycle str in Range
    (19) Command -> . Indents dSign str = Op
    (29) Command -> . Indents str hash str STR
    (30) Command -> . doctype str
    (44) Indents -> . Indents Indent
    (45) Indents -> .

    doctype         shift and go to state 4
    str             reduce using rule 45 (Indents -> .)
    }               reduce using rule 45 (Indents -> .)
    .               reduce using rule 45 (Indents -> .)
    hash            reduce using rule 45 (Indents -> .)
    input           reduce using rule 45 (Indents -> .)
    const           reduce using rule 45 (Indents -> .)
    href            reduce using rule 45 (Indents -> .)
    dSign           reduce using rule 45 (Indents -> .)
    each            reduce using rule 45 (Indents -> .)
    for             reduce using rule 45 (Indents -> .)
    tab             reduce using rule 45 (Indents -> .)

    Commands                       shift and go to state 1
    Command                        shift and go to state 2
    Indents                        shift and go to state 3

state 1

    (0) S' -> Commands .
    (1) Commands -> Commands . Command
    (3) Command -> . Indents str
    (4) Command -> . Indents str .
    (5) Command -> . Indents str . str .
    (6) Command -> . Indents str . str
    (7) Command -> . Indents str {
    (8) Command -> . Indents }
    (9) Command -> . Indents . str
    (10) Command -> . Indents hash str
    (11) Command -> . Indents input Atribs )
    (12) Command -> . Indents str ( Atribs )
    (13) Command -> . Indents str ( Atribs ) STR
    (14) Command -> . Indents str . str ( str = str )
    (15) Command -> . Indents const str = [ LqStr ]
    (16) Command -> . Indents href link STR
    (17) Command -> . Indents str STR
    (18) Command -> . Indents Cycle str in Range
    (19) Command -> . Indents dSign str = Op
    (29) Command -> . Indents str hash str STR
    (30) Command -> . doctype str
    (44) Indents -> . Indents Indent
    (45) Indents -> .

    doctype         shift and go to state 4
    str             reduce using rule 45 (Indents -> .)
    }               reduce using rule 45 (Indents -> .)
    .               reduce using rule 45 (Indents -> .)
    hash            reduce using rule 45 (Indents -> .)
    input           reduce using rule 45 (Indents -> .)
    const           reduce using rule 45 (Indents -> .)
    href            reduce using rule 45 (Indents -> .)
    dSign           reduce using rule 45 (Indents -> .)
    each            reduce using rule 45 (Indents -> .)
    for             reduce using rule 45 (Indents -> .)
    tab             reduce using rule 45 (Indents -> .)

    Command                        shift and go to state 5
    Indents                        shift and go to state 3

state 2

    (2) Commands -> Command .

    doctype         reduce using rule 2 (Commands -> Command .)
    $end            reduce using rule 2 (Commands -> Command .)
    str             reduce using rule 2 (Commands -> Command .)
    }               reduce using rule 2 (Commands -> Command .)
    .               reduce using rule 2 (Commands -> Command .)
    hash            reduce using rule 2 (Commands -> Command .)
    input           reduce using rule 2 (Commands -> Command .)
    const           reduce using rule 2 (Commands -> Command .)
    href            reduce using rule 2 (Commands -> Command .)
    dSign           reduce using rule 2 (Commands -> Command .)
    each            reduce using rule 2 (Commands -> Command .)
    for             reduce using rule 2 (Commands -> Command .)
    tab             reduce using rule 2 (Commands -> Command .)


state 3

    (3) Command -> Indents . str
    (4) Command -> Indents . str .
    (5) Command -> Indents . str . str .
    (6) Command -> Indents . str . str
    (7) Command -> Indents . str {
    (8) Command -> Indents . }
    (9) Command -> Indents . . str
    (10) Command -> Indents . hash str
    (11) Command -> Indents . input Atribs )
    (12) Command -> Indents . str ( Atribs )
    (13) Command -> Indents . str ( Atribs ) STR
    (14) Command -> Indents . str . str ( str = str )
    (15) Command -> Indents . const str = [ LqStr ]
    (16) Command -> Indents . href link STR
    (17) Command -> Indents . str STR
    (18) Command -> Indents . Cycle str in Range
    (19) Command -> Indents . dSign str = Op
    (29) Command -> Indents . str hash str STR
    (44) Indents -> Indents . Indent
    (25) Cycle -> . each
    (26) Cycle -> . for
    (46) Indent -> . tab

    str             shift and go to state 6
    }               shift and go to state 8
    .               shift and go to state 7
    hash            shift and go to state 9
    input           shift and go to state 10
    const           shift and go to state 11
    href            shift and go to state 12
    dSign           shift and go to state 14
    each            shift and go to state 16
    for             shift and go to state 17
    tab             shift and go to state 18

    Cycle                          shift and go to state 13
    Indent                         shift and go to state 15

state 4

    (30) Command -> doctype . str

    str             shift and go to state 19


state 5

    (1) Commands -> Commands Command .

    doctype         reduce using rule 1 (Commands -> Commands Command .)
    $end            reduce using rule 1 (Commands -> Commands Command .)
    str             reduce using rule 1 (Commands -> Commands Command .)
    }               reduce using rule 1 (Commands -> Commands Command .)
    .               reduce using rule 1 (Commands -> Commands Command .)
    hash            reduce using rule 1 (Commands -> Commands Command .)
    input           reduce using rule 1 (Commands -> Commands Command .)
    const           reduce using rule 1 (Commands -> Commands Command .)
    href            reduce using rule 1 (Commands -> Commands Command .)
    dSign           reduce using rule 1 (Commands -> Commands Command .)
    each            reduce using rule 1 (Commands -> Commands Command .)
    for             reduce using rule 1 (Commands -> Commands Command .)
    tab             reduce using rule 1 (Commands -> Commands Command .)


state 6

    (3) Command -> Indents str .
    (4) Command -> Indents str . .
    (5) Command -> Indents str . . str .
    (6) Command -> Indents str . . str
    (7) Command -> Indents str . {
    (12) Command -> Indents str . ( Atribs )
    (13) Command -> Indents str . ( Atribs ) STR
    (14) Command -> Indents str . . str ( str = str )
    (17) Command -> Indents str . STR
    (29) Command -> Indents str . hash str STR
    (38) STR -> . STR str
    (39) STR -> . STR Atrib
    (40) STR -> . dSign str dSign
    (41) STR -> . dSign str . str dSign
    (42) STR -> . str
    (43) STR -> . Atrib
    (35) Atrib -> . str = qStr
    (36) Atrib -> . str = link
    (37) Atrib -> . str = str

  ! shift/reduce conflict for . resolved as shift
  ! shift/reduce conflict for hash resolved as shift
  ! shift/reduce conflict for dSign resolved as shift
  ! shift/reduce conflict for str resolved as shift
    doctype         reduce using rule 3 (Command -> Indents str .)
    $end            reduce using rule 3 (Command -> Indents str .)
    }               reduce using rule 3 (Command -> Indents str .)
    input           reduce using rule 3 (Command -> Indents str .)
    const           reduce using rule 3 (Command -> Indents str .)
    href            reduce using rule 3 (Command -> Indents str .)
    each            reduce using rule 3 (Command -> Indents str .)
    for             reduce using rule 3 (Command -> Indents str .)
    tab             reduce using rule 3 (Command -> Indents str .)
    .               shift and go to state 21
    {               shift and go to state 22
    (               shift and go to state 23
    hash            shift and go to state 25
    dSign           shift and go to state 27
    str             shift and go to state 20

  ! str             [ reduce using rule 3 (Command -> Indents str .) ]
  ! .               [ reduce using rule 3 (Command -> Indents str .) ]
  ! hash            [ reduce using rule 3 (Command -> Indents str .) ]
  ! dSign           [ reduce using rule 3 (Command -> Indents str .) ]

    STR                            shift and go to state 24
    Atrib                          shift and go to state 26

state 7

    (9) Command -> Indents . . str

    str             shift and go to state 28


state 8

    (8) Command -> Indents } .

    doctype         reduce using rule 8 (Command -> Indents } .)
    $end            reduce using rule 8 (Command -> Indents } .)
    str             reduce using rule 8 (Command -> Indents } .)
    }               reduce using rule 8 (Command -> Indents } .)
    .               reduce using rule 8 (Command -> Indents } .)
    hash            reduce using rule 8 (Command -> Indents } .)
    input           reduce using rule 8 (Command -> Indents } .)
    const           reduce using rule 8 (Command -> Indents } .)
    href            reduce using rule 8 (Command -> Indents } .)
    dSign           reduce using rule 8 (Command -> Indents } .)
    each            reduce using rule 8 (Command -> Indents } .)
    for             reduce using rule 8 (Command -> Indents } .)
    tab             reduce using rule 8 (Command -> Indents } .)


state 9

    (10) Command -> Indents hash . str

    str             shift and go to state 29


state 10

    (11) Command -> Indents input . Atribs )
    (33) Atribs -> . Atribs Atrib
    (34) Atribs -> . Atrib
    (35) Atrib -> . str = qStr
    (36) Atrib -> . str = link
    (37) Atrib -> . str = str

    str             shift and go to state 32

    Atribs                         shift and go to state 30
    Atrib                          shift and go to state 31

state 11

    (15) Command -> Indents const . str = [ LqStr ]

    str             shift and go to state 33


state 12

    (16) Command -> Indents href . link STR

    link            shift and go to state 34


state 13

    (18) Command -> Indents Cycle . str in Range

    str             shift and go to state 35


state 14

    (19) Command -> Indents dSign . str = Op

    str             shift and go to state 36


state 15

    (44) Indents -> Indents Indent .

    str             reduce using rule 44 (Indents -> Indents Indent .)
    }               reduce using rule 44 (Indents -> Indents Indent .)
    .               reduce using rule 44 (Indents -> Indents Indent .)
    hash            reduce using rule 44 (Indents -> Indents Indent .)
    input           reduce using rule 44 (Indents -> Indents Indent .)
    const           reduce using rule 44 (Indents -> Indents Indent .)
    href            reduce using rule 44 (Indents -> Indents Indent .)
    dSign           reduce using rule 44 (Indents -> Indents Indent .)
    each            reduce using rule 44 (Indents -> Indents Indent .)
    for             reduce using rule 44 (Indents -> Indents Indent .)
    tab             reduce using rule 44 (Indents -> Indents Indent .)


state 16

    (25) Cycle -> each .

    str             reduce using rule 25 (Cycle -> each .)


state 17

    (26) Cycle -> for .

    str             reduce using rule 26 (Cycle -> for .)


state 18

    (46) Indent -> tab .

    str             reduce using rule 46 (Indent -> tab .)
    }               reduce using rule 46 (Indent -> tab .)
    .               reduce using rule 46 (Indent -> tab .)
    hash            reduce using rule 46 (Indent -> tab .)
    input           reduce using rule 46 (Indent -> tab .)
    const           reduce using rule 46 (Indent -> tab .)
    href            reduce using rule 46 (Indent -> tab .)
    dSign           reduce using rule 46 (Indent -> tab .)
    each            reduce using rule 46 (Indent -> tab .)
    for             reduce using rule 46 (Indent -> tab .)
    tab             reduce using rule 46 (Indent -> tab .)


state 19

    (30) Command -> doctype str .

    doctype         reduce using rule 30 (Command -> doctype str .)
    $end            reduce using rule 30 (Command -> doctype str .)
    str             reduce using rule 30 (Command -> doctype str .)
    }               reduce using rule 30 (Command -> doctype str .)
    .               reduce using rule 30 (Command -> doctype str .)
    hash            reduce using rule 30 (Command -> doctype str .)
    input           reduce using rule 30 (Command -> doctype str .)
    const           reduce using rule 30 (Command -> doctype str .)
    href            reduce using rule 30 (Command -> doctype str .)
    dSign           reduce using rule 30 (Command -> doctype str .)
    each            reduce using rule 30 (Command -> doctype str .)
    for             reduce using rule 30 (Command -> doctype str .)
    tab             reduce using rule 30 (Command -> doctype str .)


state 20

    (42) STR -> str .
    (35) Atrib -> str . = qStr
    (36) Atrib -> str . = link
    (37) Atrib -> str . = str

    str             reduce using rule 42 (STR -> str .)
    doctype         reduce using rule 42 (STR -> str .)
    $end            reduce using rule 42 (STR -> str .)
    }               reduce using rule 42 (STR -> str .)
    .               reduce using rule 42 (STR -> str .)
    hash            reduce using rule 42 (STR -> str .)
    input           reduce using rule 42 (STR -> str .)
    const           reduce using rule 42 (STR -> str .)
    href            reduce using rule 42 (STR -> str .)
    dSign           reduce using rule 42 (STR -> str .)
    each            reduce using rule 42 (STR -> str .)
    for             reduce using rule 42 (STR -> str .)
    tab             reduce using rule 42 (STR -> str .)
    ]               reduce using rule 42 (STR -> str .)
    =               shift and go to state 37


state 21

    (4) Command -> Indents str . .
    (5) Command -> Indents str . . str .
    (6) Command -> Indents str . . str
    (14) Command -> Indents str . . str ( str = str )

  ! shift/reduce conflict for str resolved as shift
    doctype         reduce using rule 4 (Command -> Indents str . .)
    $end            reduce using rule 4 (Command -> Indents str . .)
    }               reduce using rule 4 (Command -> Indents str . .)
    .               reduce using rule 4 (Command -> Indents str . .)
    hash            reduce using rule 4 (Command -> Indents str . .)
    input           reduce using rule 4 (Command -> Indents str . .)
    const           reduce using rule 4 (Command -> Indents str . .)
    href            reduce using rule 4 (Command -> Indents str . .)
    dSign           reduce using rule 4 (Command -> Indents str . .)
    each            reduce using rule 4 (Command -> Indents str . .)
    for             reduce using rule 4 (Command -> Indents str . .)
    tab             reduce using rule 4 (Command -> Indents str . .)
    str             shift and go to state 38

  ! str             [ reduce using rule 4 (Command -> Indents str . .) ]


state 22

    (7) Command -> Indents str { .

    doctype         reduce using rule 7 (Command -> Indents str { .)
    $end            reduce using rule 7 (Command -> Indents str { .)
    str             reduce using rule 7 (Command -> Indents str { .)
    }               reduce using rule 7 (Command -> Indents str { .)
    .               reduce using rule 7 (Command -> Indents str { .)
    hash            reduce using rule 7 (Command -> Indents str { .)
    input           reduce using rule 7 (Command -> Indents str { .)
    const           reduce using rule 7 (Command -> Indents str { .)
    href            reduce using rule 7 (Command -> Indents str { .)
    dSign           reduce using rule 7 (Command -> Indents str { .)
    each            reduce using rule 7 (Command -> Indents str { .)
    for             reduce using rule 7 (Command -> Indents str { .)
    tab             reduce using rule 7 (Command -> Indents str { .)


state 23

    (12) Command -> Indents str ( . Atribs )
    (13) Command -> Indents str ( . Atribs ) STR
    (33) Atribs -> . Atribs Atrib
    (34) Atribs -> . Atrib
    (35) Atrib -> . str = qStr
    (36) Atrib -> . str = link
    (37) Atrib -> . str = str

    str             shift and go to state 32

    Atribs                         shift and go to state 39
    Atrib                          shift and go to state 31

state 24

    (17) Command -> Indents str STR .
    (38) STR -> STR . str
    (39) STR -> STR . Atrib
    (35) Atrib -> . str = qStr
    (36) Atrib -> . str = link
    (37) Atrib -> . str = str

  ! shift/reduce conflict for str resolved as shift
    doctype         reduce using rule 17 (Command -> Indents str STR .)
    $end            reduce using rule 17 (Command -> Indents str STR .)
    }               reduce using rule 17 (Command -> Indents str STR .)
    .               reduce using rule 17 (Command -> Indents str STR .)
    hash            reduce using rule 17 (Command -> Indents str STR .)
    input           reduce using rule 17 (Command -> Indents str STR .)
    const           reduce using rule 17 (Command -> Indents str STR .)
    href            reduce using rule 17 (Command -> Indents str STR .)
    dSign           reduce using rule 17 (Command -> Indents str STR .)
    each            reduce using rule 17 (Command -> Indents str STR .)
    for             reduce using rule 17 (Command -> Indents str STR .)
    tab             reduce using rule 17 (Command -> Indents str STR .)
    str             shift and go to state 40

  ! str             [ reduce using rule 17 (Command -> Indents str STR .) ]

    Atrib                          shift and go to state 41

state 25

    (29) Command -> Indents str hash . str STR

    str             shift and go to state 42


state 26

    (43) STR -> Atrib .

    str             reduce using rule 43 (STR -> Atrib .)
    doctype         reduce using rule 43 (STR -> Atrib .)
    $end            reduce using rule 43 (STR -> Atrib .)
    }               reduce using rule 43 (STR -> Atrib .)
    .               reduce using rule 43 (STR -> Atrib .)
    hash            reduce using rule 43 (STR -> Atrib .)
    input           reduce using rule 43 (STR -> Atrib .)
    const           reduce using rule 43 (STR -> Atrib .)
    href            reduce using rule 43 (STR -> Atrib .)
    dSign           reduce using rule 43 (STR -> Atrib .)
    each            reduce using rule 43 (STR -> Atrib .)
    for             reduce using rule 43 (STR -> Atrib .)
    tab             reduce using rule 43 (STR -> Atrib .)
    ]               reduce using rule 43 (STR -> Atrib .)


state 27

    (40) STR -> dSign . str dSign
    (41) STR -> dSign . str . str dSign

    str             shift and go to state 43


state 28

    (9) Command -> Indents . str .

    doctype         reduce using rule 9 (Command -> Indents . str .)
    $end            reduce using rule 9 (Command -> Indents . str .)
    str             reduce using rule 9 (Command -> Indents . str .)
    }               reduce using rule 9 (Command -> Indents . str .)
    .               reduce using rule 9 (Command -> Indents . str .)
    hash            reduce using rule 9 (Command -> Indents . str .)
    input           reduce using rule 9 (Command -> Indents . str .)
    const           reduce using rule 9 (Command -> Indents . str .)
    href            reduce using rule 9 (Command -> Indents . str .)
    dSign           reduce using rule 9 (Command -> Indents . str .)
    each            reduce using rule 9 (Command -> Indents . str .)
    for             reduce using rule 9 (Command -> Indents . str .)
    tab             reduce using rule 9 (Command -> Indents . str .)


state 29

    (10) Command -> Indents hash str .

    doctype         reduce using rule 10 (Command -> Indents hash str .)
    $end            reduce using rule 10 (Command -> Indents hash str .)
    str             reduce using rule 10 (Command -> Indents hash str .)
    }               reduce using rule 10 (Command -> Indents hash str .)
    .               reduce using rule 10 (Command -> Indents hash str .)
    hash            reduce using rule 10 (Command -> Indents hash str .)
    input           reduce using rule 10 (Command -> Indents hash str .)
    const           reduce using rule 10 (Command -> Indents hash str .)
    href            reduce using rule 10 (Command -> Indents hash str .)
    dSign           reduce using rule 10 (Command -> Indents hash str .)
    each            reduce using rule 10 (Command -> Indents hash str .)
    for             reduce using rule 10 (Command -> Indents hash str .)
    tab             reduce using rule 10 (Command -> Indents hash str .)


state 30

    (11) Command -> Indents input Atribs . )
    (33) Atribs -> Atribs . Atrib
    (35) Atrib -> . str = qStr
    (36) Atrib -> . str = link
    (37) Atrib -> . str = str

    )               shift and go to state 44
    str             shift and go to state 32

    Atrib                          shift and go to state 45

state 31

    (34) Atribs -> Atrib .

    )               reduce using rule 34 (Atribs -> Atrib .)
    str             reduce using rule 34 (Atribs -> Atrib .)


state 32

    (35) Atrib -> str . = qStr
    (36) Atrib -> str . = link
    (37) Atrib -> str . = str

    =               shift and go to state 37


state 33

    (15) Command -> Indents const str . = [ LqStr ]

    =               shift and go to state 46


state 34

    (16) Command -> Indents href link . STR
    (38) STR -> . STR str
    (39) STR -> . STR Atrib
    (40) STR -> . dSign str dSign
    (41) STR -> . dSign str . str dSign
    (42) STR -> . str
    (43) STR -> . Atrib
    (35) Atrib -> . str = qStr
    (36) Atrib -> . str = link
    (37) Atrib -> . str = str

    dSign           shift and go to state 27
    str             shift and go to state 20

    STR                            shift and go to state 47
    Atrib                          shift and go to state 26

state 35

    (18) Command -> Indents Cycle str . in Range

    in              shift and go to state 48


state 36

    (19) Command -> Indents dSign str . = Op

    =               shift and go to state 49


state 37

    (35) Atrib -> str = . qStr
    (36) Atrib -> str = . link
    (37) Atrib -> str = . str

    qStr            shift and go to state 51
    link            shift and go to state 52
    str             shift and go to state 50


state 38

    (5) Command -> Indents str . str . .
    (6) Command -> Indents str . str .
    (14) Command -> Indents str . str . ( str = str )

  ! shift/reduce conflict for . resolved as shift
    .               shift and go to state 53
    doctype         reduce using rule 6 (Command -> Indents str . str .)
    $end            reduce using rule 6 (Command -> Indents str . str .)
    str             reduce using rule 6 (Command -> Indents str . str .)
    }               reduce using rule 6 (Command -> Indents str . str .)
    hash            reduce using rule 6 (Command -> Indents str . str .)
    input           reduce using rule 6 (Command -> Indents str . str .)
    const           reduce using rule 6 (Command -> Indents str . str .)
    href            reduce using rule 6 (Command -> Indents str . str .)
    dSign           reduce using rule 6 (Command -> Indents str . str .)
    each            reduce using rule 6 (Command -> Indents str . str .)
    for             reduce using rule 6 (Command -> Indents str . str .)
    tab             reduce using rule 6 (Command -> Indents str . str .)
    (               shift and go to state 54

  ! .               [ reduce using rule 6 (Command -> Indents str . str .) ]


state 39

    (12) Command -> Indents str ( Atribs . )
    (13) Command -> Indents str ( Atribs . ) STR
    (33) Atribs -> Atribs . Atrib
    (35) Atrib -> . str = qStr
    (36) Atrib -> . str = link
    (37) Atrib -> . str = str

    )               shift and go to state 55
    str             shift and go to state 32

    Atrib                          shift and go to state 45

state 40

    (38) STR -> STR str .
    (35) Atrib -> str . = qStr
    (36) Atrib -> str . = link
    (37) Atrib -> str . = str

    str             reduce using rule 38 (STR -> STR str .)
    doctype         reduce using rule 38 (STR -> STR str .)
    $end            reduce using rule 38 (STR -> STR str .)
    }               reduce using rule 38 (STR -> STR str .)
    .               reduce using rule 38 (STR -> STR str .)
    hash            reduce using rule 38 (STR -> STR str .)
    input           reduce using rule 38 (STR -> STR str .)
    const           reduce using rule 38 (STR -> STR str .)
    href            reduce using rule 38 (STR -> STR str .)
    dSign           reduce using rule 38 (STR -> STR str .)
    each            reduce using rule 38 (STR -> STR str .)
    for             reduce using rule 38 (STR -> STR str .)
    tab             reduce using rule 38 (STR -> STR str .)
    ]               reduce using rule 38 (STR -> STR str .)
    =               shift and go to state 37


state 41

    (39) STR -> STR Atrib .

    str             reduce using rule 39 (STR -> STR Atrib .)
    doctype         reduce using rule 39 (STR -> STR Atrib .)
    $end            reduce using rule 39 (STR -> STR Atrib .)
    }               reduce using rule 39 (STR -> STR Atrib .)
    .               reduce using rule 39 (STR -> STR Atrib .)
    hash            reduce using rule 39 (STR -> STR Atrib .)
    input           reduce using rule 39 (STR -> STR Atrib .)
    const           reduce using rule 39 (STR -> STR Atrib .)
    href            reduce using rule 39 (STR -> STR Atrib .)
    dSign           reduce using rule 39 (STR -> STR Atrib .)
    each            reduce using rule 39 (STR -> STR Atrib .)
    for             reduce using rule 39 (STR -> STR Atrib .)
    tab             reduce using rule 39 (STR -> STR Atrib .)
    ]               reduce using rule 39 (STR -> STR Atrib .)


state 42

    (29) Command -> Indents str hash str . STR
    (38) STR -> . STR str
    (39) STR -> . STR Atrib
    (40) STR -> . dSign str dSign
    (41) STR -> . dSign str . str dSign
    (42) STR -> . str
    (43) STR -> . Atrib
    (35) Atrib -> . str = qStr
    (36) Atrib -> . str = link
    (37) Atrib -> . str = str

    dSign           shift and go to state 27
    str             shift and go to state 20

    STR                            shift and go to state 56
    Atrib                          shift and go to state 26

state 43

    (40) STR -> dSign str . dSign
    (41) STR -> dSign str . . str dSign

    dSign           shift and go to state 57
    .               shift and go to state 58


state 44

    (11) Command -> Indents input Atribs ) .

    doctype         reduce using rule 11 (Command -> Indents input Atribs ) .)
    $end            reduce using rule 11 (Command -> Indents input Atribs ) .)
    str             reduce using rule 11 (Command -> Indents input Atribs ) .)
    }               reduce using rule 11 (Command -> Indents input Atribs ) .)
    .               reduce using rule 11 (Command -> Indents input Atribs ) .)
    hash            reduce using rule 11 (Command -> Indents input Atribs ) .)
    input           reduce using rule 11 (Command -> Indents input Atribs ) .)
    const           reduce using rule 11 (Command -> Indents input Atribs ) .)
    href            reduce using rule 11 (Command -> Indents input Atribs ) .)
    dSign           reduce using rule 11 (Command -> Indents input Atribs ) .)
    each            reduce using rule 11 (Command -> Indents input Atribs ) .)
    for             reduce using rule 11 (Command -> Indents input Atribs ) .)
    tab             reduce using rule 11 (Command -> Indents input Atribs ) .)


state 45

    (33) Atribs -> Atribs Atrib .

    )               reduce using rule 33 (Atribs -> Atribs Atrib .)
    str             reduce using rule 33 (Atribs -> Atribs Atrib .)


state 46

    (15) Command -> Indents const str = . [ LqStr ]

    [               shift and go to state 59


state 47

    (16) Command -> Indents href link STR .
    (38) STR -> STR . str
    (39) STR -> STR . Atrib
    (35) Atrib -> . str = qStr
    (36) Atrib -> . str = link
    (37) Atrib -> . str = str

  ! shift/reduce conflict for str resolved as shift
    doctype         reduce using rule 16 (Command -> Indents href link STR .)
    $end            reduce using rule 16 (Command -> Indents href link STR .)
    }               reduce using rule 16 (Command -> Indents href link STR .)
    .               reduce using rule 16 (Command -> Indents href link STR .)
    hash            reduce using rule 16 (Command -> Indents href link STR .)
    input           reduce using rule 16 (Command -> Indents href link STR .)
    const           reduce using rule 16 (Command -> Indents href link STR .)
    href            reduce using rule 16 (Command -> Indents href link STR .)
    dSign           reduce using rule 16 (Command -> Indents href link STR .)
    each            reduce using rule 16 (Command -> Indents href link STR .)
    for             reduce using rule 16 (Command -> Indents href link STR .)
    tab             reduce using rule 16 (Command -> Indents href link STR .)
    str             shift and go to state 40

  ! str             [ reduce using rule 16 (Command -> Indents href link STR .) ]

    Atrib                          shift and go to state 41

state 48

    (18) Command -> Indents Cycle str in . Range
    (27) Range -> . [ STR ]
    (28) Range -> . str

    [               shift and go to state 62
    str             shift and go to state 60

    Range                          shift and go to state 61

state 49

    (19) Command -> Indents dSign str = . Op
    (20) Op -> . Op + Op
    (21) Op -> . Op - Op
    (22) Op -> . Op * Op
    (23) Op -> . Op / Op
    (24) Op -> . str

    str             shift and go to state 63

    Op                             shift and go to state 64

state 50

    (37) Atrib -> str = str .

    str             reduce using rule 37 (Atrib -> str = str .)
    doctype         reduce using rule 37 (Atrib -> str = str .)
    $end            reduce using rule 37 (Atrib -> str = str .)
    }               reduce using rule 37 (Atrib -> str = str .)
    .               reduce using rule 37 (Atrib -> str = str .)
    hash            reduce using rule 37 (Atrib -> str = str .)
    input           reduce using rule 37 (Atrib -> str = str .)
    const           reduce using rule 37 (Atrib -> str = str .)
    href            reduce using rule 37 (Atrib -> str = str .)
    dSign           reduce using rule 37 (Atrib -> str = str .)
    each            reduce using rule 37 (Atrib -> str = str .)
    for             reduce using rule 37 (Atrib -> str = str .)
    tab             reduce using rule 37 (Atrib -> str = str .)
    )               reduce using rule 37 (Atrib -> str = str .)
    ]               reduce using rule 37 (Atrib -> str = str .)


state 51

    (35) Atrib -> str = qStr .

    str             reduce using rule 35 (Atrib -> str = qStr .)
    doctype         reduce using rule 35 (Atrib -> str = qStr .)
    $end            reduce using rule 35 (Atrib -> str = qStr .)
    }               reduce using rule 35 (Atrib -> str = qStr .)
    .               reduce using rule 35 (Atrib -> str = qStr .)
    hash            reduce using rule 35 (Atrib -> str = qStr .)
    input           reduce using rule 35 (Atrib -> str = qStr .)
    const           reduce using rule 35 (Atrib -> str = qStr .)
    href            reduce using rule 35 (Atrib -> str = qStr .)
    dSign           reduce using rule 35 (Atrib -> str = qStr .)
    each            reduce using rule 35 (Atrib -> str = qStr .)
    for             reduce using rule 35 (Atrib -> str = qStr .)
    tab             reduce using rule 35 (Atrib -> str = qStr .)
    )               reduce using rule 35 (Atrib -> str = qStr .)
    ]               reduce using rule 35 (Atrib -> str = qStr .)


state 52

    (36) Atrib -> str = link .

    str             reduce using rule 36 (Atrib -> str = link .)
    doctype         reduce using rule 36 (Atrib -> str = link .)
    $end            reduce using rule 36 (Atrib -> str = link .)
    }               reduce using rule 36 (Atrib -> str = link .)
    .               reduce using rule 36 (Atrib -> str = link .)
    hash            reduce using rule 36 (Atrib -> str = link .)
    input           reduce using rule 36 (Atrib -> str = link .)
    const           reduce using rule 36 (Atrib -> str = link .)
    href            reduce using rule 36 (Atrib -> str = link .)
    dSign           reduce using rule 36 (Atrib -> str = link .)
    each            reduce using rule 36 (Atrib -> str = link .)
    for             reduce using rule 36 (Atrib -> str = link .)
    tab             reduce using rule 36 (Atrib -> str = link .)
    )               reduce using rule 36 (Atrib -> str = link .)
    ]               reduce using rule 36 (Atrib -> str = link .)


state 53

    (5) Command -> Indents str . str . .
